# avrae-to-comic

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/skills/avrae-combat-summarizer/: SKILL.md
.codex/skills/campaign-memory-curator/: SKILL.md
.codex/skills/character-stats-analyzer/: SKILL.md
.codex/skills/character-voice-drafter/: SKILL.md
.codex/skills/comic-adaptation-planner/: SKILL.md
campaign-template/: README.md  campaign.md
campaign-template/00-inbox/: README.md
campaign-template/01-characters/: character-template.md
campaign-template/02-chat-logs/: README.md
campaign-template/03-session-summaries/: session-summary-template.md
campaign-template/04-lore/: lore-index.md
campaign-template/05-avrae/: avrae-notes.md
campaign-template/06-prompts/: catch-up.md
campaign-template/07-private-notes/: README.md
campaigns/barovia/: README.md
campaigns/fireball/: README.md
campaigns/the-gates/: README.md
campaigns/tortugia/: README.md
datasets/: README.md
docs/: comic-agent-orchestration.md  repo-workflow.md
examples/: README.md
prompts/: README.md  draft-in-character-post.md  summarize-chat-log.md
public-comics/: README.md
public-comics/don-explodicus/: comic-book.md  don-explodicus-series-bible.md
scripts/: README.md  fireball_import.py  fireball_sample.py  generate_openrouter_image.py  init_comic_page_packet.py  letter_comic_page.py
templates/agent-prompts/: continuity-agent.md  lettering-agent.md  prompt-agent.md
templates/page-packet/: continuity-brief.md  image-prompt.md  page-script.md
(+75 files in other folders)
